Revert "fix: sebo profile spacing"
This reverts commit d9d7881cd20196e2bec5ff36d468addb3b334694.

--- a/src/components/ProfilePhoto/style.css
+++ b/src/components/ProfilePhoto/style.css
@@ -4,13 +4,13 @@
   height: 175px;
   padding: 10px;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   border-radius: 100%;
   gap: 10px;
   box-shadow: var(--Achados-Success);
   overflow: 'hidden';
   align-items: center;
-  margin-top:1rem;
+  margin-bottom: 30px;
 }
 
 .icon-image {
