--- a/src/components/ProfileUsers/style.css
+++ b/src/components/ProfileUsers/style.css
@@ -1,13 +1,13 @@
 .container-profile {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 32px;
 }
 
 .profile-description {
   display: flex;
-  width: 100%;
-  height:fit-content;
+  width: 861px;
+  height: 191px;
   flex-direction: column;
   align-items: flex-start;
   gap: 10px;
